# bank-pdf-parser

./: Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: docker-publish.yml
src/: app.py  pdf_utils.py
