[project]
name = "bank-pdf-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "aleksul", email = "me@aleksul.space"}
]
dependencies = [
    "pdfplumber>=0.11.4",
    "fastapi>=0.115.5",
    "uvicorn>=0.32.0",
    "python-multipart>=0.0.17"
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
